--- a/.github/workflows/workflow-foundations.yml
+++ b/.github/workflows/workflow-foundations.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04   #Runners provided by Spaceship
   
     steps:
     - name: Check out code
